--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@types/luxon": "^3.3.7",
+    "devextreme": "23.2.4",
     "full-icu": "^1.5.0",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "devextreme-react": "23.2.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.3",
@@ -27,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "devextreme-themebuilder": "23.2.4"
   }
 }
