--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@types/luxon": "^3.3.7",
     "devextreme": "23.2.4",
+    "devextreme-react": "23.2.4",
     "full-icu": "^1.5.0",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "devextreme-react": "23.2.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.3",
@@ -25,11 +25,11 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "devextreme-themebuilder": "23.2.4",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "devextreme-themebuilder": "23.2.4"
+    "vite": "^4.4.5"
   }
 }
